--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "foundation": "~5.4.7",
     "jquery": "~2.1.3",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "springy": "~2.7.1"
   }
 }
